--- a/_toc.yml
+++ b/_toc.yml
@@ -4,13 +4,13 @@ options:  # The options key will be applied to all chapters, but not sub-section
   numbered: True
 sections:
 - file: sections/authors_SOP_development_process
-- file: sections/oxygen_introduction
-- file: sections/oxygen_sensors_integration
-- file: sections/oxygen_pre_deployment
-- file: sections/oxygen_mission_execution
-- file: sections/oxygen_rtqc
-- file: sections/oxygen_post_recovery
-- file: sections/oxygen_dmqc
+- file: sections/nitrate_introduction
+- file: sections/nitrate_sensors_integration
+- file: sections/nitrate_pre_deployment
+- file: sections/nitrate_mission_execution
+- file: sections/nitrate_rtqc
+- file: sections/nitrate_post_recovery
+- file: sections/nitrate_dmqc
 - file: sections/data_sharing
-- file: sections/oxygen_references
+- file: sections/nitrate_references
 - file: sections/acknowledgement
